--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <!--[if !IE]><!-->
 <html lang="en"><!-- <![endif]-->
 <head>
-    <title>Happy Birthday</title>
+    <title>Happy Birthday For X.L.</title>
     <meta charset="UTF-8"/>
-    <meta name="description" content="Happy Birthday">
+    <meta name="description" content="Happy Birthday For X.L.">
     <meta name="robots" content="index, follow"/>
     <link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/"/>
     <meta name="keywords" content="Birthday, Happy">
